[gd_scene load_steps=12 format=2]

[ext_resource path="res://baddies/sprites/tardi2.png" type="Texture" id=1]
[ext_resource path="res://baddies/sprites/tardi3.png" type="Texture" id=2]
[ext_resource path="res://baddies/BearCeilingBoi.gd" type="Script" id=3]
[ext_resource path="res://baddies/sprites/tardi1.png" type="Texture" id=4]
[ext_resource path="res://baddies/sprites/tardi5.png" type="Texture" id=5]
[ext_resource path="res://baddies/sprites/tardi4.png" type="Texture" id=6]
[ext_resource path="res://baddies/BaddieLaser/BaddieLaserPointer.tscn" type="PackedScene" id=7]
[ext_resource path="res://baddies/TurningHack.gd" type="Script" id=8]
[ext_resource path="res://Animations/Fade.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "rush",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.0318, 11.2155 )

[node name="BearCeilingBoi" type="KinematicBody2D" groups=[
"Baddies",
]]
rotation = 3.14159
scale = Vector2( 0.842648, 0.937197 )
collision_layer = 2147483652
collision_mask = 2147483651
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0.701961, 0, 1 )
position = Vector2( -0.334028, 0.0596727 )
frames = SubResource( 1 )
animation = "rush"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.550016, 3.30066 )
shape = SubResource( 2 )

[node name="RearRayCast" type="RayCast2D" parent="."]
position = Vector2( -15.7133, 1.21345 )
enabled = true
cast_to = Vector2( 0, 20 )
collide_with_areas = true

[node name="BaddieLaserPointer" parent="." instance=ExtResource( 7 )]

[node name="FrontRayCast" type="RayCast2D" parent="."]
position = Vector2( 15.713, 1.213 )
enabled = true
cast_to = Vector2( 0, 20 )
script = ExtResource( 8 )

[node name="Fade" type="Node" parent="."]
script = ExtResource( 9 )
